--- a/ボタン活性制御について.md
+++ b/ボタン活性制御について.md
@@ -1,211 +1,415 @@
-ボタン活性制御について
-質問者記入
-"ボタン活性制御の一例になります。詳細は[No.1]シートを確認ください。
-一部ボタンがエラー時に操作できなくなったので、エラーから復帰する処理が不要になるボタンがあるかと思いますので、不要になった処理は削除しておいてください。"
-回答者記入
+No.01	[タイトル]	【疑問】.NET Frameworkのバージョン
+1	記入日	質問者記入
+	2025/9/10	".NET FrameworkのバージョンがNXよりも前の4.5ですが、選定理由は何でしょうか？
+最新にするか、NXに合わせるかが妥当な選択かと思います。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.02	[タイトル]	【不具合】表示がWindowsの電卓と異なる
+2	記入日	質問者記入
+	2025/9/10	"2÷3,000,000,000の計算結果の表示がWindowsの電卓と異なります。
+キャプチャ画像を「No.02」に添付しました。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.03	[タイトル]	【疑問】意図がよく分からない処理
+3	記入日	質問者記入
+	2025/9/10	"Form1.cs L.1327
+FormatExponentialメソッド中で以下のように大文字から小文字に置き換えていますが、気になる箇所が2点あります。
+expString = expString.Replace(""E+"", ""e+"").Replace(""E-"", ""e-"");
 
-質問者記入
+①直後のL.1328にて以下のようにSplitし、以降でexpStringを使用していません。最初から大文字のEで分割しても変わらないような気がしますが、L.1327で置き換えているのは何故でしょうか。
+string[] parts = expString.Split(new char[] { 'e' });
 
-フォントサイズ調整処理の追加位置
-質問者記入
-AdjustFontSize()は各ボタンの処理に追加するより、textResult_TextChangedで実行したほうが、考慮漏れがなくなると思います。
-回答者記入
+②仮に①が小文字のeである必要があったとして、L.1325でToStringする際に書式指定子を小文字のeにしておけば変換結果も小文字になります。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.04	[タイトル]	【作法】Contains推奨
+4	記入日	質問者記入
+	2025/9/10	"HasBinaryOperatorInExpressionメソッド(Form.cs_L.688)で、記号の文字列が含まれるかをIndexOfの結果が0以上かどうかで判定していますが、可読性を考慮してContainsメソッドの使用を推奨します。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.05	[タイトル]	【不具合でない誤り】無意味な比較
+5	記入日	質問者記入
+	2025/9/11	"Form1.cs L.1555-1556
+float sz = ERROR_FONT_SIZE;
+if (sz < MIN_FONT_SIZE_LIMIT)
 
-質問者記入
+定数と定数を比較しており、無意味なif文です。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.06	[タイトル]	【作法】var推奨
+6	記入日	質問者記入
+	2025/9/11	"キャスト目的でない場合、変数宣言時には型を明記せずvarを使用することを推奨します。
+いちいち打つのは無駄ですし、後からの変更にも弱いため。
+VisualStudioであればマウスオーバーするだけで具体的な型が表示されるため、可読性についてもvarで問題ありません。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.07	[タイトル]	【作法】適切な命名
+7	記入日	質問者記入
+	2025/9/11	"Form1.cs L.1513
+Size sz = TextRenderer.MeasureText(textResult.Text, trial, proposed, flags);
 
-カンマ区切りが消えるパターンがある
-質問者記入
-"4桁以上の数値を入力⇒演算ボタンを押下で計算結果表示欄のカンマ区切りが消えます。(現象例は[No.3]シートを確認ください。)
-類似として、4桁以上の数値を入力⇒＋/－ボタンを押下でもカンマ区切りが消えます。"
-回答者記入
+直後のif文等で何を意図しているのか伝わりづらいので、例えば「trialTextSize」のように、何のSizeなのか分かりやすい名前を付けたほうが良いです。
+あまり長すぎても良くないとされますが、3～4単語くらいならばIntellisenseの補完もあるので気にしなくて大丈夫です。
 
-質問者記入
+同様に、L.1502の「size」も「fontSize」のように、何のSizeなのか分かるほうが良いです。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.08	[タイトル]	【作法】マジックナンバーの定数化
+8	記入日	質問者記入
+	2025/9/11	"Form1.cs L.1517
+if (Math.Abs(textResult.Font.Size - size) > 0.1f)
 
-マジックナンバーの定数化
-質問者記入
-"指数表記用の最大表示桁数」などはconstで定義していただいていますが、SetErrorStateのフォントサイズやIsInputValidの表示桁数など、マジックナンバーと判断されるものが他にもあります。
-余裕があれば、レビュー前に修正しておいたほうが良いです。"
-回答者記入
+「0.1f」がマジックナンバーになっているので、他の定数と同様に適切な名前を付けて定数化してあげてください。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.09	[タイトル]	【提案】定数クラスの作成
+9	記入日	質問者記入
+	2025/9/11	"定数用のクラスを作り、種類ごとに整理すると、より分かりやすくなりそうです。
+「No.09」シートにソースのイメージ画像を添付しました。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.10	[タイトル]	【不具合でない誤り】コメントが実態と異なる
+10	記入日	質問者記入
+	2025/9/11	"Form1.cs L.127-130
+/// <summary>
+/// 計算結果表示欄の現在のフォントサイズ
+/// </summary>
+private float defaultFontSize;
 
-質問者記入
+「現在の」フォントサイズではなく、基準となる初期値(コメントが誤りで、変数名の「default」が正しい)ではありませんか。
+コメントと実態が食い違っていると読む人が混乱して無駄な時間を使うので、適切なコメントを付けるようにしてください。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.11	[タイトル]	【疑問】デザイナーで設定しない理由
+11	記入日	質問者記入
+	2025/9/11	"Form1.cs L.237-245
+表示欄のプロパティをロードイベントで設定していますが、デザイナーで設定するのでは何か不都合があるのでしょうか。
+あちこちに処理が散らばっていると後で直すのが難しくなるので、デザイナー上で設定可能なプロパティの初期設定はデザイナーだけで完結させておいたほうが良いです。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.12	[タイトル]	[備忘]基本設計書の修正について
+12	記入日	質問者記入
+	2025/9/11	"口頭でもお伝えしましたが、以下の2点については基本設計書にも記載しておいてください。
 
-べた書きの文字列の定数化
-質問者記入
-No.4に類似しますが、べた書きの文字列についても定数化して、それを呼び出す形のほうが良いかと思います。
-回答者記入
+・0÷0で表示されるエラーメッセージ
+・工数の関係でキーボード操作については初版では未実装とした点"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.13	[タイトル]	【作法】業務エラーでは例外を使用しない
+13	記入日	質問者記入
+	2025/9/11	"Form1.cs L.1065
+throw new InvalidOperationException(ERROR_MASSAGE_UNDEFINED);
 
-質問者記入
+業務エラー(ユーザーの操作ミスにより発生する、予期・復帰できるエラー)を伝えるために例外をthrowしていますが、.NETでは業務エラーは戻り値を用いて表現すべきとされ、TimePro-NX等のソースコードもそのようになっています(例外処理はそれなりに重いため、濫用を防ぐ意図もあります)。
+具体的には、Enumでエラーコードを定義し、メソッドの戻り値はエラーコードとし、処理結果はout引数で返すといった形です。
 
-定数の規約
-質問者記入
-定数はアッパースネークケースで記載する規約になっています。(参考：[No.6]シート)
-回答者記入
-
-質問者記入
-
-ローカル変数の規約
-質問者記入
-ローカル変数にキャメルケースとスネークケースが混在しています。規約ではローカル変数はキャメルケースになっています。(参考：[No.7]シート)
-回答者記入
-
-質問者記入
-
-１行のブロックでも大括弧を付ける
-質問者記入
-"「１行のブロックでも大括弧を付ける」規約になっているため、以下のように何も処理せずにreturnする場合でも大括弧をつけて改行する必要があります。
-if (string.IsNullOrEmpty(currentText) || currentText == ""-"" || (currentText == ""0"" && !Num_Dot))
+例）
+private enum ErrorCode
 {
-　　return;
-｝"
-回答者記入
+    Success,
+    Undefined,
+    DivideByZero
+}
 
-質問者記入
+private static ErrorCode Divide(decimal numerator, decimal dominator, out decimal result)
+{
+    if (dominator == 0)
+    {
+        result = 0;
+        return numerator == 0 ? ErrorCode.Undefined : ErrorCode.DivideByZero;
+    }
 
-case文の改行
-質問者記入
-case "+": operationType = MarksType.PLUS; break;のように1行になっていますが、規約の例(参考：[No.9]シート)のように改行してください。
-回答者記入
+    result = numerator / dominator;
+    return ErrorCode.Success;
+}
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.14	[タイトル]	【作法】命名規則
+14	記入日	質問者記入
+	2025/9/11	"メンバー変数名に小文字始まりのものと大文字始まりのものとが混在しています。
+読みやすいように、一定の規則に従った命名をお願いします。
+(演習なので、「NXの命名規約に従う」「eXの命名規約に従う」等で良いと思います。)
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.15	[タイトル]	【提案】処理をシンプルにする
+15	記入日	質問者記入
+	2025/9/11	"Form1.cs L.1361
+int dot = fixedStr.IndexOf('.');
 
-質問者記入
+if文のどちらの分岐でもdotの値を使用するため、ifの手前で宣言したほうがスッキリします。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.16	[タイトル]	【不具合】イコールを挟んだ場合と挟まない場合とで計算結果が異なる
+16	記入日	質問者記入
+	2025/9/11	"◆再現手順
+以下の手順A,Bをそれぞれ行う。
 
-途中計算表示欄が指数表記にならない
-質問者記入
-途中計算表示欄は指数表記にならないようです。(現象例は[No.10]シートを確認ください。)
-回答者記入
+A-1. 初期状態から「2÷3,000,000,000＝」と入力する。
+A-2. 続けて「×1.5＝」と入力する。
 
-質問者記入
+B-1. 初期状態から「2÷3,000,000,000×1.5＝」と入力する。
 
-演算子の名称
-質問者記入
-"わざわざ指摘してくるか微妙ですが、MULTIPLIED や DIVIDED は動詞の過去分詞形、PLUS や MINUS は名詞的な形で名称に一貫性がないです。
-ADD,SUBTRACT,MULTIPLY,DIVIDEにしたほうが安全かもしれません。"
-回答者記入
+◆現象
+以下のように手順AとBとで計算結果が異なる。
+A：0.0000000010000001
+B：0.000000001
 
-質問者記入
+◆期待値
+Windowsの電卓に合わせ、Aの手順でもBと同じ結果になること。
 
-ディスプレイサイズの固定化
-質問者記入
-"ディスプレイのサイズが固定の場合、フォームに以下の設定が必要です。
-①ディスプレイサイズの最大・最小値を同じに設定
-②FormBorderStyleをFixedSingleに設定
-③最大化ボタンを非活性化"
-回答者記入
+◆備考
+表示値と内部値とを分けていないため、指数表示に変換した際に誤差が発生しているのではないかと考えられます。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.17	[タイトル]	【不具合】エラー発生時に＝ボタンが制限される
+17	記入日	質問者記入
+	2025/9/12	"エラー発生時に＝ボタンが入力制限されています。
+Windows電卓や、本電卓の基本設計書の記載ではエラー発生時も操作可能となっています。"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.18	[タイトル]	【不具合】エラー発生後、桁下げ/CEボタンを押下しても制限が解除されない
+18	記入日	質問者記入
+	2025/9/12	エラー発生後、桁下げ/CEボタン押下時にボタン制限が解除されないようです。
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.19	[タイトル]	【不具合】イコールを挟んだ場合と挟まない場合とで小数の指数表示が異なる
+19	記入日	質問者記入
+	2025/9/12	"◆再現手順
+以下の手順A,Bをそれぞれ行う。
 
-質問者記入
+A-1. 初期状態から「1÷3＝」と入力する。
+A-2. 続けて「+」と入力する。
 
-小数含む数値が30文字(小数点1文字＋数字29文字)表示されている
-質問者記入
-小数点含む文字列が最大30文字(例:14.135620166870166870166870167)まで表示できるようです。(現象例は[No.13]シートを確認ください。)
-回答者記入
+B-1. 初期状態から「1÷3＋」と入力する。
 
-質問者記入
+◆現象
+以下のように手順AとBで途中計算表示欄の出力内容が異なる。
+A：0.3333333333333333
+B：3.333333e-01
 
-％を押し続けるとエラーが発生する
-質問者記入
-加算もしくは減算で2つ目の数字に小数を入力し、％を連続で押し続けるとエラーでアプリケーションが落ちるパターンがあります。(現象例は[No.14]シートを確認ください。)
-回答者記入
+◆期待値
+Windowsの電卓に合わせ、Bの手順でもAと同じ結果になること。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.20	[タイトル]	【不具合】％ボタン押下時の表示がWindows電卓と異なる①
+20	記入日	質問者記入
+	2025/9/12	"以下の手順2の計算結果の表示がWindowsの電卓と異なります。
+1. 初期状態から「1÷3＝」と入力する。
+2. 続けて「%」と入力する。
 
-質問者記入
+表示結果は「No.20」シートをご確認ください"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.21	[タイトル]	【不具合】％ボタン押下時の表示がWindows電卓と異なる②
+21	記入日	質問者記入
+	2025/9/12	"以下の手順3の計算結果の表示がWindowsの電卓と異なります。
+1. 初期状態から「3+3=」と入力する。
+2. 続けて「%」と入力する。
+3. 続けて「%」と入力する。
 
-小数点と0のみの状態で＋/－ボタンを押した際の動作がWindows電卓と異なる
-質問者記入
-"0.00を入力⇒＋/－ボタンを押下で表示が「0」に戻ります。
-上記の状態になると、クリアボタンを押すなどしないと小数点の入力ができなくなるようです。"
-回答者記入
+表示結果は「No.21」シートをご確認ください"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.22	[タイトル]	【不具合】％ボタン押下時の表示がWindows電卓と異なる③
+22	記入日	質問者記入
+	2025/9/12	"以下の手順2の計算結果の表示がWindowsの電卓と異なります。
+1. 初期状態から「3+」と入力する。
+2. 続けて「%」と入力する。
 
-質問者記入
+表示結果は「No.22」シートをご確認ください"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.23	[タイトル]	【不具合】CEボタン押下時の表示がWindows電卓と異なる
+23	記入日	質問者記入
+	2025/9/12	"以下の手順3の途中計算表示欄の表示がWindowsの電卓と異なります。
+1. 初期状態から「3+3」と入力する。
+2. 続けて「%」と入力する。
+3. 続けて「CE」と入力する。
 
-小数点の末尾が0の状態で＋/－ボタンを押した際の動作がWindows電卓と異なる
-質問者記入
-"2.00を入力⇒＋/－ボタンを押下で表示が「-2」になります。
-Windows電卓だと「-2.00」です。"
-回答者記入
+表示結果は「No.23」シートをご確認ください"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.24	[タイトル]	【不具合】％ボタン押下後の動作がWindows電卓と異なる
+24	記入日	質問者記入
+	2025/9/12	"以下の手順2の実行後、計算結果表示欄に表示されている数字に対して桁下げや数字入力が可能になっています。
+Windows電卓ではどちらもできません。
+1. 初期状態から「1+1」と入力する。
+2. 続けて「%」と入力する。
+"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.25	[タイトル]	【不具合】+/-ボタン押下時の表示がWindows電卓と異なる①
+25	記入日	質問者記入
+	2025/9/12	"以下の手順2の途中計算表示欄の表示がWindowsの電卓と異なります。
+1. 初期状態から「3+」と入力する。
+2. 続けて「+/-」と入力する。
 
-質問者記入
+表示結果は「No.25」シートをご確認ください
 
-(No.15の類似)小数を入力した状態で％ボタンを押すと小数点が入力できなくなる
-質問者記入
-0.00を入力⇒％ボタンを押下で表示が「0」に戻った後、小数点ボタンが入力できなくなるようです。
-回答者記入
+また、上記のように「+/-」後に数字を入力した場合、Windows電卓と異なり、結果欄に表示されている数字の末尾に数字が追加される不具合もあるようです。"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.26	[タイトル]	【不具合】+/-ボタン押下時の表示がWindows電卓と異なる②
+26	記入日	質問者記入
+	2025/9/12	"以下の手順2の途中計算表示欄の表示がWindowsの電卓と異なります。
+1. 初期状態から「3+3=」と入力する。
+2. 続けて「+/-」と入力する。
 
-質問者記入
+表示結果は「No.26」シートをご確認ください
 
-指数の後ろに数字が入力できるようになる
-質問者記入
-"0.0000002を入力⇒＋/－ボタンを押下で表示が「-2E-07」となります。
-その後、数値キーを入力すると、「-2E-07」の後ろに数字が追加されていきます。(現象例は[No.18]シートを確認ください。)"
-回答者記入
+また、上記の後に桁下げボタンとCEボタンを押下した際の表示もWindowsの電卓と異なるようです。"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.27	[タイトル]	【不具合】途中計算表示欄がnegate()表示になると、挙動がおかしくなる
+27	記入日	質問者記入
+	2025/9/12	"途中計算表示欄がnegate(数字)のような状態になると、複数の演算子を連続して入力できるようです。
+表示結果は「No.27」シートをご確認ください"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.28	[タイトル]	summaryコメントの処理の記載について
+28	記入日	質問者記入
+	2025/9/16	OnToggleSignButtonメソッド等、summaryコメントに詳細処理の内容がまとまって書いてあるものが多いですが、詳細処理のコメントは実際の処理中に書いておいた方が分かりやすいと思います。少なくともNXではそのように記載されているものがほとんどです。
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.29	[タイトル]	複数の処理をしているメソッドのコメント
+29	記入日	質問者記入
+	2025/9/16	OnOperatorButton等一つのメソッドで多くの処理ケースが存在しており、一見しただけでは何をしているかわかりにくいです。長文化しているメソッドは各処理をメソッド化するのでなければ、せめて処理の直前に何をするかコメントがあるとよいです。
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.30	[タイトル]	行:1614 初期化後の文字サイズ調整処理
+30	記入日	質問者記入
+	2025/9/16	直前にtext.Resurlt.Fontにデフォルトサイズのフォントをセットしているかと思いますが、その直後にAutoFitResultFontで文字サイズ調整を行っているように見えます。初期化時は0固定となる認識ですので、文字サイズの調整は不要な気がしますが何か理由がありますでしょうか。
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.31	[タイトル]	Tabインデックスがおかしい
+31	記入日	質問者記入
+	2025/9/16	7ボタンの次に←ボタンにタブ移行するなど、一部のタブインデックスが正常でないようです。
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.32	[タイトル]	 HasBinaryOperatorInExpressionメソッドの演算子判断
+32	記入日	質問者記入
+	2025/9/16	演算子のチェック処理において、スペースで挟んでありますが、演算子だけで問題ない気がします。(チェック対象が冗長に見える)
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.33	[タイトル]	除算処理
+33	記入日	質問者記入
+	2025/9/16	0で割る処理ですが、分子について0とそれ以外で分けていますが、基本設計書のその記載がありません
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.34	[タイトル]	除算処理その２
+34	記入日	質問者記入
+	2025/9/16	"0で割る処理ですが、1÷0.0000000000000001%と実施すると、中間式1÷0、結果0となります
+No20～22と関連あり"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.35	[タイトル]	サインチェンジキー
+35	記入日	質問者記入
+	2025/9/16	"基本設計書の5.2.2(10)「計算結果に対してサインチェンジキーを入力する場合」の
+計算例「-100×500」の結果が、途中計算表示欄と異なります。
 
-質問者記入
-
-数値⇒＝ボタン⇒＋/－ボタン⇒演算ボタンの表示がWindows電卓と異なる
-質問者記入
-数値⇒＝ボタン⇒＋/－ボタン⇒演算ボタンの順に押した際の表示がWindows電卓と異なります。(現象例は[No.19]シートを確認ください。)
-回答者記入
-
-質問者記入
-
-＝ボタン⇒%ボタンの順に操作した際の表示がWindows電卓と異なる
-質問者記入
-"以下の手順で操作すると、Windows電卓と異なる表示になるようです。(現象例は[No.20]シートを確認ください。)
-①数値を入力
-②＋ボタンを押下
-③数値を入力
-④＝ボタンを押下
-⑤％のボタンを押下
-
-また、上記の後に桁下げボタンを押下した際の表示もWindows電卓と異なるようです。"
-回答者記入
-
-質問者記入
-
-＝ボタン⇒CEボタンの順に操作した際の表示がWindows電卓と異なる
-質問者記入
-=ボタンで演算を実行した直後にCEボタンを押下した際の表示がWindows電卓と異なるようです。。(現象例は[No.21]シートを確認ください。)
-回答者記入
-
-質問者記入
-
-％ボタン⇒演算ボタンの順に操作した際の表示がWindows電卓と異なる
-質問者記入
-"以下の手順で操作すると、Windows電卓と異なる表示になるようです。(現象例は[No.22]シートを確認ください。)
-①数値を入力
-②演算ボタンを押下
-③数値を入力
-④演算ボタンを押下
-⑤％のボタンを押下
-⑥演算ボタンを押下"
-回答者記入
-
-質問者記入
-
-演算ボタン押下時に計算結果が小数になっていると小数点ボタンが入力できない
-質問者記入
-演算ボタン押下時に計算結果が小数になっていると小数点ボタンが入力できなくなるようです。
-回答者記入
-
-質問者記入
-
-0÷0のエラーについて
-質問者記入
-0÷0のパターンで基本設計書に記載がないエラーがあるようです。(現象例は[No.24]シートを確認ください。)
-回答者記入
-
-質問者記入
-
-メソッドのコメントについて
-質問者記入
-"メソッドに対するコメントのフォーマットは規約で定められています。(参考：[No.25]シート)
-最終的に掲示レビューとして展開する成果物については、上記のフォーマットに準じたものとなるようにしてください。"
-回答者記入
-
-質問者記入
-
-AdjustFontSize()について
-質問者記入
-"テキストのLengthと最大表示桁数でフォントサイズの調整されていますが、
-今の作りですと小数の場合、整数の場合、指数の場合で表示時のフォントサイズにバラつきがあったり、文字が見切れたりします。(現象例は[No.26]シートを確認ください。)
-
-MeasureStringメソッドという描画する文字列の高さと幅を取得できるメソッドがあるので、
-表示する文字列自体の幅とテキストボックスの幅を比較してフォントサイズを調整したほうが、
-文字列の大きさが安定すると思います。"
+例では「negate(-50000)」ですが、実際は「negate(-100×500)」と表示されます。"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.36	[タイトル]	演算ボタンの文字が揃っていない
+36	記入日	質問者記入
+	2025/9/16	演算ボタン btnDivideとbtnMultiplyは全角「÷」「×」、btnMinusとbtnPlusは半角「-」「+」です。揃えた方が良いと考えますが、揃えなかった理由はありますか。
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+No.37	[タイトル]	画面タイトルと最前面表示キー
+37	記入日	質問者記入
+	2025/9/16	"・画面タイトルが「Form1」のままなので「電卓」にする。
+・基本設計書に記載していない内容ですが、、
+　最前面表示キーは押下しても見た目が変わらず、設定が変わったのか分かりにくいので、ボタンの見た目でステータスがわかると、より良いと思いました。"
+	回答日	回答者記入
+		
+	記入日	質問者記入
+		
+<img width="883" height="7055" alt="image" src="https://github.com/user-attachments/assets/ca338019-c4f9-41ef-a072-b8e2e693e9ff" />
